[package]
name = "rendezvous"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
foldhash = "0.1.5"
itertools = "0.14"
linked-hash-map = "0.5.6"
rand = "0.9"
rand_distr = "0.5"
slotmap = "1"
wasm-bindgen = "0.2.100"

